@@ -4,6 +4,8 @@
 	that was meant to do this.  This fixes Savannah bug #47188.
 	* src/search.c (findnextstr): Clean up and rename a variable.
 	* src/search.c (findnextstr): Poll the keyboard once per second.
+	* src/winio.c (reset_cursor): Remove a pointless condition, and make
+	use of an existing intermediary variable.
 
 2016-03-22  Thomas Rosenau  <thomasr@fantasymail.de>
 	* configure.ac, src/*.c: Check for the existence of the REG_ENHANCED
